[package]
name = "pdp-11"
version = "0.1.0"
authors = ["Elliot Lockerman <elliot@lockerman.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "emu"
path = "src/emu.rs"

[[bin]]
name = "as"
path = "src/as.rs"

[build-dependencies]
lalrpop = "0.19.5"

[dependencies]
lalrpop-util = "0.19.5"
num-derive = "0.3.3"
structopt = "0.3.21"
structopt-derive = "0.4.14"
num-traits = "0.2.14"
