[package]
name = "assembler"
version = "0.1.0"
authors = ["Elliot Lockerman <elliot@lockerman.info>"]
edition = "2021"

[lib]
name = "as_lib"

[[bin]]
name = "as_cli"


[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
common = { path = "../common" }
aout = { path = "../aout" }
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }
log = "0.4.22"
num-derive = "0.4.2"
num-traits = "0.2.14"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.5"
thiserror = "1.0.63"
