[package]
name = "emulator"
version = "0.1.0"
authors = ["Elliot Lockerman <elliot@lockerman.info>"]
edition.workspace = true

[lib]
name = "emu_lib"

[[bin]]
name = "emu_cli"

[dependencies]
common = { path = "../common" }
aout = { path = "../aout" }
log = "0.4.22"
num-derive = "0.4.2"
num-traits = "0.2.14"
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.4"
delegate = "0.12.0"
crossterm = "0.28.1"

