[package]
name = "interpreter"
version = "0.1.0"
authors = ["Elliot Lockerman <elliot@lockerman.info>"]
edition.workspace = true

[dependencies]
assembler = { path = "../assembler" }
emulator = { path = "../emulator" }
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.5"
clap-stdin = "0.6.0"
