[package]
name = "tests"
version = "0.1.0"
authors = ["Elliot Lockerman <elliot@lockerman.info>"]
edition = "2021"
publish = false

[dev-dependencies]
assembler = { path = "../assembler" }
emulator = { path = "../emulator" }
common = { path = "../common" }

[[test]]
name = "tests"
path = "src/tests.rs"
