[package]
name = "tests"
version = "0.1.0"
authors = ["Elliot Lockerman <elliot@lockerman.info>"]
publish = false
edition.workspace = true

[dev-dependencies]
assembler = { path = "../assembler" }
emulator = { path = "../emulator" }
common = { path = "../common" }

[[test]]
name = "tests"
path = "src/tests.rs"
